patch: style corrections

--- a/src/app/notes/add-notes/add-notes.component.scss
+++ b/src/app/notes/add-notes/add-notes.component.scss
@@ -16,6 +16,9 @@
   width: 66vw;
   box-shadow: 1px 1px 12px 0px #dbecdb;
   border-radius: 6px;
+  margin-left: 20px;
+  background-color: white;
+  margin-top: 20px;
 }
 .elem-wrap {
   display: flex;
