--- a/src/app/notes/listing/listing.component.html
+++ b/src/app/notes/listing/listing.component.html
@@ -1,27 +1,31 @@
-<ul>
-    <ng-container *ngIf="noteListing?.length > 0">
-        <li *ngFor="let item of noteListing">
-            <aside class="content">
-                <span class="title">
-                    {{item?.title}}
-                </span>
-                <p class="desc">
-                    {{item?.description}}
-                </p>
-                <span class="time">
-                    {{item?.createdDate | date: 'medium'}}
-                </span>
-            </aside>
-            <aside class="right">
-                <span (click)="editData(item)">Edit</span>
-                <span (click)="deleteData(item)">Delete</span>
-            </aside>
-        </li>
-    </ng-container>
-    <li *ngIf="noteListing?.length === 0">
-        <span class="no-notes">
+<section class="bg-grey">
+    <h2>Added notes</h2>
 
-            No notes found
-        </span>
-    </li>
-</ul>
+    <ul>
+        <ng-container *ngIf="noteListing?.length > 0">
+            <li *ngFor="let item of noteListing">
+                <aside class="content">
+                    <span class="title">
+                        {{item?.title}}
+                    </span>
+                    <p class="desc">
+                        {{item?.description}}
+                    </p>
+                    <span class="time">
+                        {{item?.createdDate | date: 'medium'}}
+                    </span>
+                </aside>
+                <aside class="right">
+                    <span (click)="editData(item)">Edit</span>
+                    <span (click)="deleteData(item)">Delete</span>
+                </aside>
+            </li>
+        </ng-container>
+        <li *ngIf="noteListing?.length === 0">
+            <span class="no-notes">
+
+                No notes found
+            </span>
+        </li>
+    </ul>
+</section>
