--- a/src/app/notes/notes.component.scss
+++ b/src/app/notes/notes.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
-
- 
+  padding: 20px;
+  border-bottom: 1px solid #dbecdb;
 }
